--- a/EduMultiPro 3 Parte/FrontEnd/1-login.html
+++ b/EduMultiPro 3 Parte/FrontEnd/1-login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="icon" href="img/icono.png">
+  <link rel="icon" href="../img/icono.png">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"> <!--libreria de logos-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="css/1.css">
@@ -20,7 +20,7 @@
         <div class="col-12 col-sm-12 col-md-3 col-lg-2 col-xl-2 col-xxl-2" id="n1">
 
           <div class="d-flex justify-content-end my-lg-2 px-lg-4">
-            <img class="img-fluid" src="img/logo.png" alt="" id="img1">
+            <img class="img-fluid" src="./img/logo.png" alt="" id="img1">
           </div>
         </div>
         <div class="col-12 col-sm-12 col-md-9 col-lg-4 col-xl-4 col-xxl-4 d-flex justify-content-start align-items-center" id="n2">
@@ -47,9 +47,9 @@
               </form>
           </div>
           <div class="cajaimagen d-none d-lg-block">
-              <img src="img/1.PNG" alt="Imagen 1">
-              <img src="img/2.PNG" alt="Imagen 2">
-              <img src="img/3.PNG" alt="Imagen 3">
+              <img src="../img/1.PNG" alt="Imagen 1">
+              <img src="../img/2.PNG" alt="Imagen 2">
+              <img src="../img/3.PNG" alt="Imagen 3">
           </div>
       </div>
     </div>
@@ -69,6 +69,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="js/1.js"></script>
+  <script src="../js/1.js"></script>
 </body>
 </html>
