se agrega funciones del los botones crear, modificar y eliminar

--- a/EduMultiPro 3 Parte/FrontEnd/admin/3-curso.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/3-curso.html
@@ -84,7 +84,7 @@
             <div class="col-10" id="contenidoTabla">
                 <div class="titulo">
                     <h1>Cursos Actuales</h1>
-                    <button>Crear Curso</button>
+                    <button class="crear">Crear Curso</button>
                 </div>
                 <div class="contenedor-tabla">
                     <table class="tablaUsuarios" id="tablaUsuarios">
