--- a/EduMultiPro 3 Parte/FrontEnd/admin/7-planillas.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/7-planillas.html
@@ -84,7 +84,7 @@
             <div class="col-10" id="contenidoTabla">
                 <div class="titulo">
                     <h1>Planillas Actuales</h1>
-                    <button>Crear planilla</button>
+                    <button class="crear">Crear planilla</button>
                 </div>
                 <div class="contenedor-tabla">
                     <table class="tablaUsuarios" id="tablaUsuarios">
@@ -108,8 +108,8 @@
                                 <td>Tarde</td>
                                 <td>Primer periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>Pl002</td>
@@ -118,8 +118,8 @@
                                 <td>Mañana</td>
                                 <td>Segundo Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>PL003</td>
@@ -128,8 +128,8 @@
                                 <td>Mañana</td>
                                 <td>Tercer Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>PL004</td>
@@ -138,8 +138,8 @@
                                 <td>Tarde</td>
                                 <td>Cuarto Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>PL001</td>
@@ -148,8 +148,8 @@
                                 <td>Tarde</td>
                                 <td>Primer periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>Pl002</td>
@@ -158,8 +158,8 @@
                                 <td>Mañana</td>
                                 <td>Segundo Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>PL003</td>
@@ -168,8 +168,8 @@
                                 <td>Mañana</td>
                                 <td>Tercer Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>PL004</td>
@@ -178,8 +178,8 @@
                                 <td>Tarde</td>
                                 <td>Cuarto Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>PL001</td>
@@ -188,8 +188,8 @@
                                 <td>Tarde</td>
                                 <td>Primer periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>Pl002</td>
@@ -198,8 +198,8 @@
                                 <td>Mañana</td>
                                 <td>Segundo Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>PL003</td>
@@ -208,8 +208,8 @@
                                 <td>Mañana</td>
                                 <td>Tercer Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>PL004</td>
@@ -218,8 +218,8 @@
                                 <td>Tarde</td>
                                 <td>Cuarto Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>PL001</td>
@@ -228,8 +228,8 @@
                                 <td>Tarde</td>
                                 <td>Primer periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>Pl002</td>
@@ -238,8 +238,8 @@
                                 <td>Mañana</td>
                                 <td>Segundo Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>PL003</td>
@@ -248,8 +248,8 @@
                                 <td>Mañana</td>
                                 <td>Tercer Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>PL004</td>
@@ -258,8 +258,8 @@
                                 <td>Tarde</td>
                                 <td>Cuarto Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>PL001</td>
@@ -268,8 +268,8 @@
                                 <td>Tarde</td>
                                 <td>Primer periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>Pl002</td>
@@ -278,8 +278,8 @@
                                 <td>Mañana</td>
                                 <td>Segundo Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>PL003</td>
@@ -288,8 +288,8 @@
                                 <td>Mañana</td>
                                 <td>Tercer Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>PL004</td>
@@ -298,8 +298,8 @@
                                 <td>Tarde</td>
                                 <td>Cuarto Periodo</td>
                                 <td><button><i class="fa-solid fa-folder-open"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                         </tbody>
                     </table>
