--- a/EduMultiPro 3 Parte/FrontEnd/admin/8-noticia.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/8-noticia.html
@@ -84,7 +84,7 @@
             <div class="col-10" id="contenidoTabla">
                 <div class="titulo">
                     <h1>Gestion de Noticias</h1>
-                    <button>Crear Noticia</button>
+                    <button class="crear">Crear Noticia</button>
                 </div>
                 <div class="contenedor-tabla">
                     <table class="tablaUsuarios" id="tablaUsuarios">
@@ -104,32 +104,32 @@
                                 <td>Nuevos Boletines</td>
                                 <td>Noticia Primaria 1</td>
                                 <td><button><i class="fa-solid fa-radio"></i></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                  <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                  <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>N002</td>
                                 <td>Nuevos Trabajos</td>
                                 <td>Noticia Secundaria 2</td>
                                 <td><button><i class="fa-solid fa-radio"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>N003</td>
                                 <td>Nuevas Tecnologias</td>
                                 <td>Noticia Primaria 2</td>
                                 <td><button><i class="fa-solid fa-radio"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>N004</td>
                                 <td>Nuevos Horarios</td>
                                 <td>Noticia Secundaria 3</td>
                                 <td><button><i class="fa-solid fa-radio"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             
                         </tbody>
