--- a/EduMultiPro 3 Parte/FrontEnd/admin/2-usuario.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/2-usuario.html
@@ -84,7 +84,7 @@
             <div class="col-10" id="contenidoTabla">
                 <div class="titulo">
                     <h1>Gestion de Usuarios</h1>
-                    <button>Crear Usuario</button>
+                    <button class="crear">Crear Usuario</button>
                 </div>
                 <div class="contenedor-tabla">
                     <table class="tablaUsuarios" id="tablaUsuarios">
