--- a/EduMultiPro 3 Parte/FrontEnd/admin/4-horario.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/4-horario.html
@@ -84,7 +84,7 @@
             <div class="col-10" id="contenidoTabla">
                 <div class="titulo">
                     <h1>Horarios Actuales</h1>
-                    <button>Crear Horario</button>
+                    <button class="crear">Crear Horario</button>
                 </div>
                 <div class="contenedor-tabla">
                     <table class="tablaUsuarios" id="tablaUsuarios">
