--- a/EduMultiPro 3 Parte/FrontEnd/admin/5-aula.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/5-aula.html
@@ -84,7 +84,7 @@
             <div class="col-10" id="contenidoTabla">
                 <div class="titulo">
                     <h1>Aulas Actuales</h1>
-                    <button>Crear Aula</button>
+                    <button class="crear">Crear Aula</button>
                 </div>
                 <div class="contenedor-tabla">
                     <table class="tablaUsuarios" id="tablaUsuarios">
@@ -108,8 +108,8 @@
                                 <td>502</td>
                                 <td>Juan Camilo</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A002</td>
@@ -118,8 +118,8 @@
                                 <td>603</td>
                                 <td>Sara Camila</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A003</td>
@@ -128,8 +128,8 @@
                                 <td>401</td>
                                 <td>Wilson Sanches</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A004</td>
@@ -138,8 +138,8 @@
                                 <td>702</td>
                                 <td>Miguel Sanches</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A001</td>
@@ -148,8 +148,8 @@
                                 <td>502</td>
                                 <td>Juan Camilo</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A002</td>
@@ -158,8 +158,8 @@
                                 <td>603</td>
                                 <td>Sara Camila</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A003</td>
@@ -168,8 +168,8 @@
                                 <td>401</td>
                                 <td>Wilson Sanches</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A004</td>
@@ -178,8 +178,8 @@
                                 <td>702</td>
                                 <td>Miguel Sanches</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A001</td>
@@ -188,8 +188,8 @@
                                 <td>502</td>
                                 <td>Juan Camilo</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A002</td>
@@ -198,8 +198,8 @@
                                 <td>603</td>
                                 <td>Sara Camila</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A003</td>
@@ -208,8 +208,8 @@
                                 <td>401</td>
                                 <td>Wilson Sanches</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A004</td>
@@ -218,8 +218,8 @@
                                 <td>702</td>
                                 <td>Miguel Sanches</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A001</td>
@@ -228,8 +228,8 @@
                                 <td>502</td>
                                 <td>Juan Camilo</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A002</td>
@@ -238,8 +238,8 @@
                                 <td>603</td>
                                 <td>Sara Camila</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A003</td>
@@ -248,8 +248,8 @@
                                 <td>401</td>
                                 <td>Wilson Sanches</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A004</td>
@@ -258,8 +258,8 @@
                                 <td>702</td>
                                 <td>Miguel Sanches</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A001</td>
@@ -268,8 +268,8 @@
                                 <td>502</td>
                                 <td>Juan Camilo</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A002</td>
@@ -278,8 +278,8 @@
                                 <td>603</td>
                                 <td>Sara Camila</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A003</td>
@@ -288,8 +288,8 @@
                                 <td>401</td>
                                 <td>Wilson Sanches</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A004</td>
@@ -298,8 +298,8 @@
                                 <td>702</td>
                                 <td>Miguel Sanches</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A001</td>
@@ -308,8 +308,8 @@
                                 <td>502</td>
                                 <td>Juan Camilo</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A002</td>
@@ -318,8 +318,8 @@
                                 <td>603</td>
                                 <td>Sara Camila</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A003</td>
@@ -328,8 +328,8 @@
                                 <td>401</td>
                                 <td>Wilson Sanches</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                             <tr>
                                 <td>A004</td>
@@ -338,8 +338,8 @@
                                 <td>702</td>
                                 <td>Miguel Sanches</td>
                                 <td><button><i class="fa-solid fa-users-rectangle"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-gear"></i></button></td>
-                                <td><button class="btn-icon"><i class="fa-solid fa-trash"></i></button></td>
+                                <td><button class="btn-icon modificar"><i class="fa-solid fa-gear"></i></button></td>
+                                <td><button class="btn-icon eliminar"><i class="fa-solid fa-trash"></i></button></td>
                             </tr>
                         </tbody>
                     </table>
